--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "binance": "^1.1.2",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "ws": "^3.3.3"
   },
   "devDependencies": {
     "request": "^2.81.0",
